--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.2.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.0",
+    "react-social-icons": "^6.16.0",
     "styled-components": "^6.1.9",
     "yup": "^1.4.0"
   },
