--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copyright-update": "^1.19.0",
     "formik": "^2.4.6",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
