--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-icons": "^5.2.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.0",
+    "react-slick": "^0.30.2",
     "react-social-icons": "^6.16.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.9",
     "yup": "^1.4.0"
   },
