--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.0",
