ajout dans vercel.json pour redirection /sitemap.xml

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
-
-{ 
+{
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    },
+
+
+    {
+      "source": "/sitemap.xml",
+      "destination": "https://phenixdeals-back.onrender.com/sitemap.xml"
     }
   ]
 }
