--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
     "react-social-icons": "^6.16.0",
+    "react-spinners": "^0.15.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.9",
     "yup": "^1.4.0"
