--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/dist/index.html"
     }
   ],
   "headers": [
