--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npm run postbuild",
-    "postbuild": "react-snap",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -27,7 +26,6 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
-    "react-snap": "^1.23.0",
     "react-social-icons": "^6.16.0",
     "react-spinners": "^0.15.0",
     "slick-carousel": "^1.8.1",
