chgt domain name

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
+//I've changed the domain name; so i've added the "redirects" rule to redirect the old domain to the new one / permanent: true makes it a 301 redirect / /$1 matches everything after the domain name/...
 {
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "destination": "https://phenixdeals.com/$1",
+      "has": [
+        {
+          "type": "host",
+          "value": "phenix-deals.com"
+        }
+      ],
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/sitemap.xml",
