--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-slick": "^0.30.2",
     "react-social-icons": "^6.16.0",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.9",
     "yup": "^1.4.0"
