BIG Update Dashboard and data structure

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-# Vite automatically runs this code with npm run build in the hosting domain
+# Vite automatically runs this code with npm run build in Vercel / So it had to be named .env.production
 # The name of the variable MUST start with VITE 
 # Ne pas mettre dans gitignore !!
 
